Fix firefox table column alignments for devices

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -556,7 +556,7 @@ span.length {
 
 .report-list, .list-item {
   display: inline-block;
-  margin-right: 2%;
+  margin-right: 3%;
   width: 30%;
   vertical-align: top;
 }
@@ -699,7 +699,6 @@ tr.expand {
     border: 1px solid @lightgrey;
     padding: 0 15px;
     position:relative;
-    left: -10px;
     border-radius: 5px;
   }
 
